# Utilities

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxifile  Doxyfile  README.md
include/: dbg.h  macros.h  test_macros.h  utilities.h
src/: CMakeLists.txt  utilities.c
test/: CMakeLists.txt  test_util_cmp.c  test_util_from_string.c  test_util_print.c  test_util_to_string.c
